--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -39,9 +39,7 @@ $very-pale-gray: #f4f4f4;
 $dark-gray: #bcbcbc;
 $gold: #eeaa00;
 $grey-label: #9e9e9e;
-<<<<<<< 6b9fcb574df6ebbbc451e4c1ce8a8b70473adf13
 $twitter-blue: #00aced;
 $deep-twitter-blue: #00a8e6;
-=======
 $light-grey: #fafafa;
->>>>>>> feat(profile page): design customer account page
+$light-red: #f44336;
