--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -15,18 +15,16 @@
           <%= link_to "FAQ", "#", class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <span  class="white-text small-text">Currency - NGN</span>
-          <% if logged_in %>
             <span class="white-text small-text">&nbsp;|&nbsp;</span>
-            <span class="black-text small-text">
+            <span class="small-text">
 
-              <%= render "user_profile" %>
+              <%= auth_link %>
             </span>
-          <% end %>
         </div>
       </div>
     </div>
     <nav class="white valign-wrapper">
-      <div class="row container-trim">
+      <div class="row white-header">
         <div class="col s2">
           <div class="left">
             <a class="brand-logo black-text" href="<%= root_path %>">
@@ -51,7 +49,7 @@
         </div>
         ​
         <div class="col s4">
-          <div class="valign-wrapper">
+          <div>
             <span class="search-icon-span left">
              <i class="large material-icons search-i" id="search">search</i>
            </span>
@@ -75,8 +73,6 @@
             </a>
             <%= render "cart_dropdown" %>
           </span>
-          <span class="white-text small-text">&nbsp;|&nbsp;</span>
-          <%= auth_link %>
         </div>
       </nav>
     </div>
