--- a/app/views/orders/past_orders.html.erb
+++ b/app/views/orders/past_orders.html.erb
@@ -11,6 +11,7 @@
             PAST ORDERS
           </div>
           <div class="row profile-fields">
+            <%= render "orders/cancel_order_toast" %>
             <%= order_page %>
           </div>
         </div>
