--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -2,7 +2,7 @@
   <div class="user-address">
 
     <div class="address-name">
-      <%= @address.name %> <span class="default-adress pull-right">default</span>
+      <span class="default-adress">Default address</span>
     </div>
 
     <div class="address-display-account">
