feat(product page): disable add to cart button
disable add to cart button when product is out of stock
style disabled button

[#117351601]

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -133,8 +133,15 @@
   }
 }
 
-.products-input {
+.p-input {
   height: 2.3rem !important;
+}
+
+.my-disabled {
+  background: $disabled-grey;
+  box-shadow: none;
+  color: $disabled-text;
+  pointer-events: none;
 }
 
 hr {
