--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -43,3 +43,5 @@ $twitter-blue: #00aced;
 $deep-twitter-blue: #00a8e6;
 $light-grey: #fafafa;
 $light-red: #f44336;
+$disabled-grey: #dfdfdf;
+$disabled-text: #9f9f9f;
