--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -79,7 +79,9 @@
           <div class="col s2">
             <%= number_field_tag :quantity, 1, in: 1..@product.quantity, step: 1 %>
           </div>
-          <div class="col s4"><%= submit_tag "ADD TO CART", class: "waves-effect btn products-input", id: "submit"%></div>
+          <div class="col s4">
+            <%= add_to_cart %>
+          </div>
          <%= wishlist_add_link %>
         </div>
       </div>
