fix(user): delete user account
soft delete a user account by rendering the active status as false rather than remove data from db

[closes #118483339]

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -31,7 +31,7 @@
                   <%= f.text_field :email, required: "required", minlenght: 2, class: "" %>
                 </div>
               </div>
-               <%= f.submit "Update", class: "btn btn-flat" %>
+               <%= f.submit "Update", class: "btn waves-effect b-width" %>
             </div>
           <% end %>
         </div>
