--- a/app/assets/stylesheets/single_blog.scss
+++ b/app/assets/stylesheets/single_blog.scss
@@ -1,15 +1,15 @@
 .parallax-container {
-	height: 350px;
+    height: 350px;
 }
 
 .blog-meta {
-	opacity: .6;
+    opacity: 0.6;
 }
 
 .blog-text {
-	opacity: .9;
+    opacity: 0.9;
 }
 
 .blog-title {
-	opacity: .8;
+   opacity: 0.8;
 }
