chore(refactor): adjusting to style guide

--- a/app/views/landing/blog.html.erb
+++ b/app/views/landing/blog.html.erb
@@ -2,7 +2,7 @@
 <div class="container">
 	<h1>Blog</h1>
 	<div class="row">
-		<% 6.times do |number| %>
+		<% (1..6).each do |number| %>
 		<div class="col l4 s12 m4">
 			<div class="card">
 				<div class="card-image waves-effect waves-block waves-light">
