fix(footer links): Missing and broken quick links
Buttons in the quick links session should lead to the right pages. More quick links should also be added.

closes #120780477

--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,9 +3,13 @@
 		<div class="row">
 			<div class="white-text col s12 m4 l4">
 				<span>Quick Links</span><br /><br />
-				<span class="white-text small-text"><%= link_to "Fashion", "#", class: "white-text" %></span><br />
-				<span class="white-text small-text"><%= link_to "Electronics", "#", class: "white-text" %></span><br />
-				<span class="white-text small-text"><%= link_to "Home and Kitchen", "#", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Fashion", "/categories/1", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Electronics", "/categories/2", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Home and Kitchen", "/categories/3", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Baby, Kids and Toys", "/categories/4", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Machinery", "/categories/5", class: "white-text" %></span><br />
+				<span class="white-text small-text"><%= link_to "Books", "/categories/6", class: "white-text" %></span><br/>
+				<span class="white-text small-text"><%= link_to "Sports and Fitness", "/categories/7", class: "white-text" %></span><br />
 			</div>
 			
 			<div class="white-text col s12 m4 l4">
