--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -3,9 +3,7 @@
 		<div class="row">
 			<div class="white-text col s12 m4 l4">
 				<span>Quick Links</span><br /><br />
-				<span class="white-text small-text"><%= link_to "Fashion", "#", class: "white-text" %></span><br />
-				<span class="white-text small-text"><%= link_to "Electronics", "#", class: "white-text" %></span><br />
-				<span class="white-text small-text"><%= link_to "Home and Kitchen", "#", class: "white-text" %></span><br />
+				<%= render @menu_categories %>
 			</div>
 			
 			<div class="white-text col s12 m4 l4">
