--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "header" %>
+<%= render partial: "header" %>
 <div class="signup-box">
   <div class="container">
     <div class="center">
