--- a/app/views/application/_category_dropdown.html.erb
+++ b/app/views/application/_category_dropdown.html.erb
@@ -14,7 +14,7 @@
           <div class="row">
             <div class="col l1">&nbsp;</div>
               <li class="col l10">
-                <%= link_to subcategory.name, "#" %>
+                <%= link_to subcategory.name, "/categories/#{category.id}/subcategory/#{subcategory.id}" %>
               </li>
             <div class="col l1">&nbsp;</div>
           </div>
