--- a/app/views/categories/_paginate_products.html.erb
+++ b/app/views/categories/_paginate_products.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="digg-pagination right"><%= will_paginate @products %></div>
 </div>
-<div class= "row category-products">
+<div class= "category-products">
   <%= render partial: "landing/product", collection: @products %>
 </div>
 <div class="row">
