chore(refactor): refactored the views, controller and added partials and helpers

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -6,13 +6,13 @@
           <span class="white-text small-text">FAST &amp; FREE SHIPPING ON ALL ORDERS - CALL US : 08020000000</span>
         </div>
         <div class="right">
-          <%= link_to "About us", "/about", class: 'white-text small-text' %>
+          <%= link_to "About us", about_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
-          <%= link_to "Blog", "/blog", class: 'white-text small-text' %>
+          <%= link_to "Blog", blog_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <%= link_to "Contact Us", "/contact", class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
-          <%= link_to "FAQ", "/faq", class: 'white-text small-text' %>
+          <%= link_to "FAQ", faq_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <span  class="white-text small-text">Currency - NGN</span>
             <span class="white-text small-text">&nbsp;|&nbsp;</span>
