--- a/app/views/landing/about.html.erb
+++ b/app/views/landing/about.html.erb
@@ -2,8 +2,8 @@
 <div class="container">
 	<h1>About Us</h1>
 	<p>
-		<img src="<%= Faker::Avatar.image %>" align="left">
-		<span><%= @text %></span>
+		<img src="<%= image %>" align="left">
+		<span><%= text %></span>
 	</p>
 </div>
 <%= render partial: 'footer' %>
