--- a/app/views/landing/blog.html.erb
+++ b/app/views/landing/blog.html.erb
@@ -2,32 +2,7 @@
 <div class="container">
 	<h1>Blog</h1>
 	<div class="row">
-		<% (1..6).each do |number| %>
-		<div class="col l4 s12 m4">
-			<div class="card">
-				<div class="card-image waves-effect waves-block waves-light">
-					<img class="activator" src="<%= Faker::Avatar.image(nil, '200x200') %>">
-				</div>
-				<div class="card-content">
-					<div class="card-title activator grey-text text-darken-4">
-						<div class="row">
-							<span class="truncate">
-								<%= Faker::Lorem.words(3).join(' ').capitalize %>
-							</span>
-						</div>
-					</div>
-					<p><a href="/blog/<%= number %>" class="btn">Read More...</a></p>
-				</div>
-				<div class="card-reveal">
-					<span class="card-title grey-text text-darken-4">
-						<i class="material-icons right">close</i>
-						<%= Faker::Lorem.words(3).join(' ').capitalize %>
-					</span>
-					<p><%= Faker::Lorem.paragraph(8) %></p>
-				</div>
-			</div>
-		</div>
-		<% end %>
+		<%= render :partial => "posts" %>
 	</div>
 </div>
 <%= render partial: 'footer' %>
