fix(style): corrects houndci comment raised about scss depth selector

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -250,8 +250,9 @@ hr {
   font-size: 1.4em !important;
 }
 
-.card .card-image img {
-  display: inline-block;
+.card {
+  .card-image {
+    display: inline-block;
+  }
 }
-
 
