chore(conflict): resolved conflict

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,4 +1,5 @@
 <%= render partial: 'header' %>
+<%= report_not_found %>
 <div class="shift-down">
   <div class="container-large">
     <div class="row nav-like-height valign-wrapper">
