--- a/app/views/carts/delete_item.js.erb
+++ b/app/views/carts/delete_item.js.erb
@@ -1,4 +1,4 @@
-$("div.order_item_list_entry_<%= @deleted_item["item_id"] %>").remove();
+<!-- $("div.order_item_list_entry_<%= @deleted_item["item_id"] %>").remove();
 
 $("span#total-item").html("<%= @total_items %>");
 $("span#total-price").html("<%= @total_amount %>");
@@ -7,4 +7,4 @@ Materialize.toast("Item removed from cart", 1500);
 
 if(<%= @cart.size == 0 %>){
   location.reload()
-}
+} -->
