--- a/app/views/users/_address.html.erb
+++ b/app/views/users/_address.html.erb
@@ -1,21 +1,21 @@
 <div class="col l12">
   <div class="user-address">
-
     <div class="address-name">
       <span class="default-adress">Default address</span>
     </div>
-
+    <div class="address-name">
+      <%= @address.name %>
+    </div>
+    
+    
     <div class="address-display-account">
       <%= @address.address %>, <%= @address.city %>
     </div>
-
     <div class="address-display-account">
-        <%= @address.phone %>
+      <%= @address.phone %>
     </div>
-
     <div class="address-display-account">
       <%= @address.state %>, <%= @address.country %>
     </div>
   </div>
 </div>
-
