feat: shop signup page [finish #107709190]

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 //= require jquery.fileupload-ui
 
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+@import url('https://fonts.googleapis.com/css?family=Assistant|Open+Sans+Condensed:300|PT+Sans+Narrow|Raleway');
 @import "materialize";
 @import "font-awesome-sprockets";
 @import "font-awesome";
@@ -17,4 +18,5 @@
 @import "filter";
 @import "search";
 @import "single_blog";
-@import "shop_owners"
+@import "shop_owners";
+@import "shop";
