--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -14,6 +14,8 @@
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <%= link_to "FAQ", faq_path, class: 'white-text small-text' %>
           <span class="white-text small-text">&nbsp;|&nbsp;</span>
+          <%= link_to "Create Shop", new_shop_path, class: 'white-text small-text' %>
+          <span class="white-text small-text">&nbsp;|&nbsp;</span>
           <span  class="white-text small-text">Currency - NGN</span>
             <span class="white-text small-text">&nbsp;|&nbsp;</span>
             <span class="small-text">
