--- a/app/views/shops/_new_shop_form.html.erb
+++ b/app/views/shops/_new_shop_form.html.erb
@@ -1,38 +1,38 @@
 <form class="col s12" id="shop-signup-form">
 	<ul class="collapsible popout" data-collapsible="accordion">
 		<li>
-			<div class="collapsible-header active teal accent-4 white-text"><i class="material-icons">filter_drama</i>Shop Information</div>
+			<div class="collapsible-header active white-text orange"><i class="material-icons">filter_drama</i>Shop Information</div>
 			<div class="collapsible-body">
 				<div class="row">
-					<div class="input-field col s8 offset-s2">
+					<div class="input-field col s10 offset-s1">
 						<input id="shop_name" name="shop_name" type="text" class="validate">
 						<label for="shop_name">Shop name</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s10 offset-s1">
-						<div class="input-field col s6">
+						<div class="input-field col s5">
 							<input id="shop_url_prefix" name="shop_url_prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
-							<label for="shop_url">Shop URL</label>
 						</div>
-						<div class="input-field col s6">
-							<input id="shop_url" name="shop_url" type="text" class="valdate" placeholder="e.g: shop-name">
+						<div class="input-field col s7" id="shop_url_wrapper">
+							<input id="shop_url" name="shop_url" type="text" class="valdate">
+							<label for="shop_url">Shop URL</label>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<textarea id="description" name="description" class="materialize-textarea" placeholder="Describe your shop"></textarea>
+						<textarea id="description" name="description" class="materialize-textarea"></textarea>
 						<label for="description">Description</label>
 					</div>
 				</div>
 			</div>
 		</li>
 		<li>
-			<div class="collapsible-header teal accent-4 white-text"><i class="material-icons">place</i>Location</div>
+			<div class="collapsible-header white-text orange"><i class="material-icons">place</i>Shop Location</div>
 			<div class="collapsible-body">
 				<div class="row">
-					<div class="input-field col s8 offset-s2">
+					<div class="input-field col s10 offset-s1">
 						<input id="address" name="address" type="text" class="validate">
 						<label for="address">Address</label>
 					</div>
@@ -65,8 +65,8 @@
 		</li>
 	</ul>
 	<div class="row">
-		<div class="input-field col s12">
-			<button id="submit" type="submit" name="submit" class="btn right">Submit</button>
+		<div class="input-field col s12 center-align">
+			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat orange white-text">Create Shop</button>
 		</div>
 	</div>
 </form>
