--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -1,10 +1,9 @@
-<%# render partial: 'header' %>
 <div class="row" id="shop-creation-container">
-	<div class="teal lighten-1 valign-wrapper">
+	<div class="valign-wrapper">
 		<div class="valign col s12 m10 l8 pull-l2 pull-m1">
-			<a href="/"><h3 class="white-text center-align" id="shop-signup-header">Get-My-Shop</h3></a>
 			<div class="row">
-				<div class="col s8 offset-s2 white" id="shop-signup-container">
+				<div class="col s8 offset-s2" id="shop-signup-container">
+					<a href="/"><h3 class="center-align" id="shop-signup-header">Get-My-Shop</h3></a>
 					<div class="center-align">
 						<h5>CREATE YOUR SHOP</h5>
 					</div>
@@ -16,4 +15,3 @@
 		</div>
 	</div>
 </div>
-<%# render partial: 'footer' %>
