fix: houndci issues

--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -3,7 +3,7 @@
 		<div class="valign col s12 m10 l8 pull-l2 pull-m1">
 			<div class="row">
 				<div class="col s8 offset-s2" id="shop-signup-container">
-					<a href="/"><h3 class="center-align" id="shop-signup-header">Get-My-Shop</h3></a>
+					<a href="/"><h3 class="center-align teal-text" id="shop-signup-header">Get-My-Shop</h3></a>
 					<div class="center-align">
 						<h5>CREATE YOUR SHOP</h5>
 					</div>
