--- a/app/views/shops/_new_shop_form.html.erb
+++ b/app/views/shops/_new_shop_form.html.erb
@@ -1,50 +1,55 @@
 <form class="col s12" id="shop-signup-form">
-	<ul class="collapsible popout" data-collapsible="accordion">
+	<ul class="collapsible popout" data-collapsible="expandable">
 		<li>
 			<div class="collapsible-header active white-text orange"><i class="material-icons">filter_drama</i>Shop Information</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<input id="shop_name" name="shop_name" type="text" class="validate">
+						<input id="shop_name" name="shop_name" type="text" class="validate" required>
 						<label for="shop_name">Shop name</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s10 offset-s1">
 						<div class="input-field col s5">
-							<input id="shop_url_prefix" name="shop_url_prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
+							<input id="shop-url-prefix" name="shop-url-prefix" value="www.getmyshop.com/" type="text" class="valdate" disabled>
 						</div>
-						<div class="input-field col s7" id="shop_url_wrapper">
-							<input id="shop_url" name="shop_url" type="text" class="valdate">
-							<label for="shop_url">Shop URL</label>
+						<div class="input-field col s7" id="shop-url-wrapper">
+							<input id="shop-url" name="shop-url" type="text" class="valdate" required>
+							<label for="shop-url">Shop URL</label>
 						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<textarea id="description" name="description" class="materialize-textarea"></textarea>
+						<textarea id="description" name="description" class="materialize-textarea" required></textarea>
 						<label for="description">Description</label>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col s12">
+						<button onclick="openLocationTab()" class="waves-effect waves-light btn-flat orange white-text right">Next</button>
 					</div>
 				</div>
 			</div>
 		</li>
 		<li>
-			<div class="collapsible-header white-text orange"><i class="material-icons">place</i>Shop Location</div>
+			<div class="collapsible-header white-text orange location-tab"><i class="material-icons">place</i>Shop Location</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
-						<input id="address" name="address" type="text" class="validate">
+						<input id="address" name="address" type="text" class="validate" required>
 						<label for="address">Address</label>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col s10 offset-s1">
 						<div class="input-field col s6">
-							<input id="city" name="city" type="text" class="validate">
+							<input id="city" name="city" type="text" class="validate" required>
 							<label for="city">City</label>
 						</div>
 						<div class="input-field col s6">
-							<input id="state" name="state" type="text" class="validate">
+							<input id="state" name="state" type="text" class="validate" required>
 							<label for="state">State</label>
 						</div>
 					</div>
@@ -52,11 +57,11 @@
 				<div class="row">
 					<div class="col s10 offset-s1">
 						<div class="input-field col s6">
-							<input id="country" name="country" type="text" class="validate">
+							<input id="country" name="country" type="text" class="validate" required>
 							<label for="country">Country</label>
 						</div>
 						<div class="input-field col s6">
-							<input id="phone" name="phone" type="text" class="validate">
+							<input id="phone" name="phone" type="text" class="validate" required>
 							<label for="phone">Phone Number</label>
 						</div>
 					</div>
