--- a/app/views/user_mailer/welcome_shop_owner.html.erb
+++ b/app/views/user_mailer/welcome_shop_owner.html.erb
@@ -1,5 +1,5 @@
 <div>
   <p>Your ShopOwner account has been created.</p>
   <p>Click on the following link to activate your account</p>
-  <p><%= link_to activate_shop_owners_url(shop_owner_id: @shop_owner.id, activation_token: @shop_owner.activation_token), activate_shop_owners_url(shop_owner_id: @shop_owner.id, activation_token: @shop_owner.activation_token) %></p>
+  <p><%= link_to activate_shop_owners_url(token: @shop_owner.generate_token), activate_shop_owners_url(token: @shop_owner.generate_token) %></p>
 </div>
