--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -45,3 +45,8 @@ $light-grey: #fafafa;
 $light-red: #f44336;
 $disabled-grey: #dfdfdf;
 $disabled-text: #9f9f9f;
+$shop-orange-color: rgba(211, 109, 24, 1);
+$shop-container-color: rgba(255, 255, 255, 0.95);
+$shop-overlay-color: rgba(0, 0, 0, 0.6);
+$shop-signup-font: Assistant;
+$shop-border-shadow: rgba(0, 0, 0, 0.5);
