--- a/app/views/shops/_new_shop_form.html.erb
+++ b/app/views/shops/_new_shop_form.html.erb
@@ -1,7 +1,7 @@
 <form class="col s12" id="shop-signup-form">
 	<ul class="collapsible popout" data-collapsible="expandable">
 		<li>
-			<div class="collapsible-header active white-text orange"><i class="material-icons">filter_drama</i>Shop Information</div>
+			<div class="collapsible-header active white-text teal"><i class="material-icons">filter_drama</i>Shop Information</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
@@ -28,13 +28,13 @@
 				</div>
 				<div class="row">
 					<div class="col s12">
-						<button onclick="openLocationTab()" class="waves-effect waves-light btn-flat orange white-text right">Next</button>
+						<button onclick="openLocationTab()" class="waves-effect waves-light btn-flat teal white-text right">Next</button>
 					</div>
 				</div>
 			</div>
 		</li>
 		<li>
-			<div class="collapsible-header white-text orange location-tab"><i class="material-icons">place</i>Shop Location</div>
+			<div class="collapsible-header white-text teal location-tab"><i class="material-icons">place</i>Shop Location</div>
 			<div class="collapsible-body">
 				<div class="row">
 					<div class="input-field col s10 offset-s1">
@@ -71,7 +71,7 @@
 	</ul>
 	<div class="row">
 		<div class="input-field col s12 center-align">
-			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat orange white-text">Create Shop</button>
+			<button id="submit" type="submit" name="submit" class="waves-effect waves-light btn-flat teal white-text">Create Shop</button>
 		</div>
 	</div>
 </form>
