--- a/app/views/shop_owners/_form.html.erb
+++ b/app/views/shop_owners/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@shop_owner) do |f| %>
+<%= form_for @shop_owner, url: { action: "create" } do |f| %>
   <% if @shop_owner.errors.any? %>
     <div id="error_explanation">
       <ul>
