--- a/app/assets/stylesheets/shop.scss
+++ b/app/assets/stylesheets/shop.scss
@@ -31,16 +31,16 @@ a > h3 {
 }
 
 #shop-signup-container {
-  background-color: $shop-container-color;
+  background-color: transparent;
   background-repeat: round;
   border-radius: 7px;
-  box-shadow: 2px 2px 5px $shop-border-shadow;
   padding: 10px;
   position: relative;
   z-index: 9999;
 
   h5 {
     opacity: 0.7;
+    color: white;
   }
 }
 
@@ -60,3 +60,4 @@ a > h3 {
 .orange {
   background-color: $shop-orange-color !important;
 }
+
