--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -3,13 +3,13 @@
 		<div class="valign col s12 m10 l8 pull-l2 pull-m1">
 			<div class="row">
 				<div class="col s8 offset-s2" id="shop-signup-container">
-					<a href="/"><h3 class="center-align teal-text" id="shop-signup-header">Get-My-Shop</h3></a>
+					<a href="/"><h3 class="center-align white-text" id="shop-signup-header">Get-My-Shop</h3></a>
 					<div class="center-align">
 						<h5>CREATE YOUR SHOP</h5>
 					</div>
-					<%= render :partial => "new_shop_form" %>
+					<%= render :partial => "form" %>
 					<div class="divider teal darken-3"></div>
-					<p class="center-align">By creating a shop you agree with our <a href="#" class="teal-text darken-4">Terms of Service</a></p>
+					<p class="center-align white-text">By creating a shop you agree with our <a href="#" class="teal-text darken-4">Terms of Service</a></p>
 				</div>
 			</div>
 		</div>
