--- a/app/views/shops/new.html.erb
+++ b/app/views/shops/new.html.erb
@@ -5,7 +5,7 @@
 				<div class="col s8 offset-s2" id="shop-signup-container">
 					<a href="/"><h3 class="center-align white-text" id="shop-signup-header">Get-My-Shop</h3></a>
 					<div class="center-align">
-						<h5>CREATE YOUR SHOP</h5>
+						<h5 class="white-text">CREATE YOUR SHOP</h5>
 					</div>
 					<%= render :partial => "form" %>
 					<div class="divider teal darken-3"></div>
